-Added upload meme and meme activity

--- a/MachineProject_HotnSpicyMemes/app/src/main/res/values/strings.xml
+++ b/MachineProject_HotnSpicyMemes/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">MachineProject_HotnSpicyMemes</string>
+
+    <string-array name="CategorySelection">
+        <item>Choose Category</item>
+        <item>Funny</item>
+        <item>Gaming</item>
+        <item>Random</item>
+    </string-array>
 </resources>
